testdata/baselines/reference/submodule/compiler/checkJsTypeDefNoUnusedLocalMarked.errors.txt
something.js(3,20): error TS8010: Type annotations can only be used in TypeScript files.
something.js(5,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
something.js(5,29): error TS8016: Type assertion expressions can only be used in TypeScript files.


==== file.ts (0 errors) ====
    class Foo {
        x: number;
    }
    
    declare global {
        var module: any; // Just here to remove unrelated error from test
    }
    
    export = Foo;
==== something.js (3 errors) ====
    /** @typedef {typeof import("./file")} Foo */
    
    /** @typedef {(foo: Foo) => string} FooFun */
                       ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
    module.exports = /** @type {FooFun} */(void 0);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
                                ~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.